[package]
name = "midi2x11"
version = "0.1.0"
authors = ["Ron B <me@ronthecookie.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = { version = "0.7.0", features = [ "jack" ] }
anyhow = "1.0"
x11-dl = "2.18"
